# Games101Ex

./: .gitignore
Assignment0/代码框架/: main.cpp
Assignment1/代码框架/: rasterizer.cpp  rasterizer.hpp
Assignment2/代码框架/: Triangle.hpp  rasterizer.cpp  rasterizer.hpp
Assignment3/Code/: CMakeLists.txt  Shader.hpp  Triangle.hpp
Exercises/Assignment0/代码框架/: CMakeLists.txt
Exercises/Assignment1/代码框架/: CMakeLists.txt  Triangle.cpp  Triangle.hpp  main.cpp
Exercises/Assignment2/代码框架/: CMakeLists.txt  main.cpp
Exercises/Assignment3/Code/: Texture.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
Exercises/Homework1/Assignment1/: CMakeLists.txt  Triangle.cpp  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
Exercises/Homework2/Assignment2/: CMakeLists.txt  main.cpp  rasterizer.cpp  rasterizer.hpp
Exercises/Homework3/Assignment3/: CMakeLists.txt  Shader.hpp  Texture.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
Exercises/Homework4/Assignment4/: main.cpp
Exercises/Homework5/Assignment5/: Renderer.cpp  Triangle.hpp
Exercises/Homework6/Assignment6/: BVH.cpp  Bounds3.hpp  Renderer.cpp  Triangle.hpp
Exercises/Homework7/Assignment7/: BVH.cpp  Bounds3.hpp  Scene.cpp  Triangle.hpp
Exercises/Homework7/Assignment7/images/: binary.ppm
